# LAKE

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  main.cpp
src/: FileHelper.hpp  LogicAnalyzer.cpp  LogicAnalyzer.hpp  LogicAnalyzerView.cpp  LogicAnalyzerView.hpp  Parser.hpp  Popup.cpp  Popup.hpp  Window.cpp  Window.hpp  main.cpp
